[gd_scene load_steps=2 format=3 uid="uid://c538d5hdrs0h0"]

[ext_resource type="Script" path="res://src/shared/ui/intro.gd" id="1_kgsiw"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgsiw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Username" type="LineEdit" parent="HBoxContainer/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "sean"
placeholder_text = "Enter Username"

[node name="JoinIP" type="LineEdit" parent="HBoxContainer/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "127.0.0.1"
placeholder_text = "Enter IP"

[node name="JoinPort" type="LineEdit" parent="HBoxContainer/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "50301"
placeholder_text = "Enter Port"

[node name="JoinGame" type="Button" parent="HBoxContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Join Game"

[node name="Control2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ServerPort" type="LineEdit" parent="HBoxContainer/Control2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "50301"
placeholder_text = "Enter Port"

[node name="HostGame" type="Button" parent="HBoxContainer/Control2/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Host Game"

[connection signal="button_up" from="HBoxContainer/Control/VBoxContainer/JoinGame" to="." method="_on_join_game_button_up"]
[connection signal="button_up" from="HBoxContainer/Control2/VBoxContainer/HostGame" to="." method="_on_host_game_button_up"]
